syntax = "proto3";

option go_package = "./pb";

package pb;

message File{
  string Id = 1;
  string Name = 2;
  string Type = 3;
  string Path = 4;
  string Size = 5;
  string ShareLink = 6;
  string ModifyTime = 7;
}

message FileUploadReq{
  string Name = 1;
  string Type = 6;
  int64 FileSize = 2;
  string SourcePath = 3;
  int64 Size = 5;
  int64 Routines = 4;
}

message FileUploadResp {}

message FileDownloadReq{
  string Id = 1;
  string Name = 2;
  string Type = 3;
}

message FileDownloadResp {}

message FileListReq{
  string Id = 1;
  int64 Page = 2;
  int64 Size = 3;
}

message FileListResp{
  repeated File List = 1;
  int64 Count = 2;
}

message FileNameUpdateReq{
  string Id = 1;
  string Mame = 2;
}

message FileNameUpdateResp{}

message FileCreateReq{
  string ParentId = 1;
  string Name = 2;
}

message FileCreateResp{}

message FileDeletionReq{
  string Id = 1;
}

message FileDeletionResp{}

message FileMoveReq{
  string LastParentId = 1;
  string PreParentId = 2;
  string Id = 3;
}

message FileMoveResp{}

message FileShareReq{
  string Id = 1;
}

message FileShareResp{
  string ShareLink = 1;
}

message FileShareSaveReq{
  string ParentId = 1;
  string ShareLink = 2;
  string Name = 3;
}

message FileShareSaveResp{
  string Id = 1;
}

message FileDetailsReq{
  string Id = 1;
}

message FileDetailsResp{
  string Name = 1;
  string Type = 2;
  string Path = 3;
  string Size = 4;
  string Time = 5;
}

service filecenter {
  rpc FileUpload(FileUploadReq) returns (FileUploadResp);
  rpc FileDownload(FileDownloadReq) returns (FileDownloadResp);
  rpc FileList(FileListReq) returns (FileListResp);
  rpc FileNameUpdate(FileNameUpdateReq) returns (FileNameUpdateResp);
  rpc FileCreate(FileCreateReq) returns (FileCreateResp);
  rpc FileDeletion(FileDeletionReq) returns (FileDeletionResp);
  rpc FileMove(FileMoveReq) returns (FileMoveResp);
  rpc FileShare(FileShareReq) returns (FileShareResp);
  rpc FileShareSave(FileShareSaveReq) returns (FileShareSaveResp);
  rpc FileDetails(FileDetailsReq) returns (FileDetailsResp);
}